# Fairydream

./: README.md
hw/FairyLightController/: FairyLightController.kicad_pcb  FairyLightController.kicad_prl  FairyLightController.kicad_pro  FairyLightController.kicad_sch  sym-lib-table
sw/: CMakeLists.txt  source.c
sw/nec_receive_library/: nec_receive.h
